# ml-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
src/: cb_trainer.py  lgbm_trainer.py  main.py  nn_trainer.py  preprocess.py  tool.py  trainer.py
yamls/: config.yaml
yamls/exp/: base.yaml  exp0.yaml
